src/objects/CustomObject18__c.object
<CustomObject>
    <fields>
        <fullName>ActingTenderingCompany__c</fullName>
        <label>代理投标公司</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Adi__c</fullName>
        <label>产品线</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>海德堡</fullName>
                </value>
                <value>
                    <fullName>光太激光</fullName>
                </value>
                <value>
                    <fullName>光太超声</fullName>
                </value>
                <value>
                    <fullName>徕卡</fullName>
                </value>
                <value>
                    <fullName>歌德</fullName>
                </value>
                <value>
                    <fullName>罗兰</fullName>
                </value>
                <value>
                    <fullName>KOWA</fullName>
                </value>
                <value>
                    <fullName>NeoMedix</fullName>
                </value>
                <value>
                    <fullName>Frastema</fullName>
                </value>
                <value>
                    <fullName>OPTOS</fullName>
                </value>
                <value>
                    <fullName>SCHWIND</fullName>
                </value>
                <value>
                    <fullName>LENSAR</fullName>
                </value>
                <value>
                    <fullName>LUNEAU</fullName>
                </value>
                <value>
                    <fullName>HAI</fullName>
                </value>
                <value>
                    <fullName>HEINE</fullName>
                </value>
                <value>
                    <fullName>TOKA</fullName>
                </value>
                <value>
                    <fullName>GI</fullName>
                </value>
                <value>
                    <fullName>Espansione</fullName>
                </value>
                <value>
                    <fullName>Diopsys</fullName>
                </value>
                <value>
                    <fullName>Phoenix</fullName>
                </value>
                <value>
                    <fullName>Vrmagic</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Amount__c</fullName>
        <label>数量</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CPyuce__c</fullName>
        <label>产品预测类别</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>忽略</fullName>
                </value>
                <value>
                    <fullName>已成交</fullName>
                </value>
                <value>
                    <fullName>有把握</fullName>
                </value>
                <value>
                    <fullName>可争取</fullName>
                </value>
                <value>
                    <fullName>其他</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DescriptionConfiguration__c</fullName>
        <label>配置及商务条款说明</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DomesticGeneralAgent__c</fullName>
        <label>国内总代公司</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Field1__c</fullName>
        <label>销售机会</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>销售机会产品</relationshipLabel>
        <relationshipName>Field1</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Field2__c</fullName>
        <label>中标设备型号</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Field3__c</fullName>
        <label>中标公司</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HighNoteRecords__c</fullName>
        <label>厂牌</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>JZDS1__c</fullName>
        <label>竞争对手1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>JZDS2__c</fullName>
        <label>竞争对手2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>JZDS3__c</fullName>
        <label>竞争对手3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>JZJX1__c</fullName>
        <label>竞争机型1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>JZJX3__c</fullName>
        <label>竞争机型3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>JZjx2__c</fullName>
        <label>竞争机型2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ModelNumber__c</fullName>
        <label>型号</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Model__c</fullName>
        <label>型号</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Adi__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>HRA</fullName>
                </value>
                <value>
                    <fullName>HRA Multicolor</fullName>
                </value>
                <value>
                    <fullName>Multicolor+FFA</fullName>
                </value>
                <value>
                    <fullName>OCT</fullName>
                </value>
                <value>
                    <fullName>OCT2</fullName>
                </value>
                <value>
                    <fullName>HRA+OCT</fullName>
                </value>
                <value>
                    <fullName>HRA+OCT2</fullName>
                </value>
                <value>
                    <fullName>HRT3</fullName>
                </value>
                <value>
                    <fullName>OCT2 Multicolor</fullName>
                </value>
                <value>
                    <fullName>OCTMulticolor</fullName>
                </value>
                <value>
                    <fullName>UWF</fullName>
                </value>
                <value>
                    <fullName>Vitra532</fullName>
                </value>
                <value>
                    <fullName>Supra 532</fullName>
                </value>
                <value>
                    <fullName>YAG</fullName>
                </value>
                <value>
                    <fullName>SLT</fullName>
                </value>
                <value>
                    <fullName>supra810</fullName>
                </value>
                <value>
                    <fullName>supra577</fullName>
                </value>
                <value>
                    <fullName>VMS</fullName>
                </value>
                <value>
                    <fullName>suprascan577</fullName>
                </value>
                <value>
                    <fullName>5CL+XL532FMW</fullName>
                </value>
                <value>
                    <fullName>Axis Nano</fullName>
                </value>
                <value>
                    <fullName>Compact Touch（A超+B超）</fullName>
                </value>
                <value>
                    <fullName>Aviso(A超+B超)</fullName>
                </value>
                <value>
                    <fullName>Aviso(UBM)</fullName>
                </value>
                <value>
                    <fullName>Aviso一体机(A超+B超+UBM)</fullName>
                </value>
                <value>
                    <fullName>Compact Touch UBM</fullName>
                </value>
                <value>
                    <fullName>Proveo8</fullName>
                </value>
                <value>
                    <fullName>Leica 3D</fullName>
                </value>
                <value>
                    <fullName>M844F40</fullName>
                </value>
                <value>
                    <fullName>M844F20</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Possibility__c</fullName>
        <label>产品可能性</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>ProductName__c</fullName>
        <label>产品名称</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QUANTITY__c</fullName>
        <label>数量（丢单分析）</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>产品状态</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>跟进</fullName>
                </value>
                <value>
                    <fullName>赢单</fullName>
                </value>
                <value>
                    <fullName>丢单</fullName>
                </value>
                <value>
                    <fullName>中断</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TOTALAMOUNT__c</fullName>
        <formula>QUANTITY__c * UnitPrice__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>总金额</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Test__c</fullName>
        <formula>IF(ISPICKVAL(State__c, &quot;丢单&quot;) || ISPICKVAL(State__c, &quot;中断&quot;), 0.00,  UnitCost__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>实际</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ThrowReason__c</fullName>
        <label>丢单原因</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>State__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>价格</fullName>
                </value>
                <value>
                    <fullName>品牌</fullName>
                </value>
                <value>
                    <fullName>客户关系</fullName>
                </value>
                <value>
                    <fullName>项目中断</fullName>
                </value>
                <value>
                    <fullName>策略及打包</fullName>
                </value>
                <value>
                    <fullName>其他</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TotalMoney__c</fullName>
        <formula>UnitCost__c  *  Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>预计成交总价（元）</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>UnitCost__c</fullName>
        <label>预计成交单价（元）</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>UnitPrice__c</fullName>
        <label>单价（元）</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ywjh__c</fullName>
        <formula>CreatedBy.Profile.Name</formula>
        <label>所有人简档</label>
        <type>Text</type>
    </fields>
    <label>销售机会产品</label>
    <nameField>
        <displayFormat>CP-{00000000}</displayFormat>
        <label>销售机会产品编码</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>销售机会产品</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>diudanyuanyinbitian</fullName>
        <active>true</active>
        <errorConditionFormula>AND( 
(ywjh__c =&quot;常规设备销售部大区经理简档&quot; || ywjh__c =&quot;常规设备销售部销售简档&quot; || ywjh__c =&quot;香港公司销售简档&quot; || ywjh__c =&quot;香港公司运营经理简档&quot; ) &amp;&amp; IF(text( State__c )==&quot;丢单&quot; &amp;&amp;  ( text( ThrowReason__c )== &quot;&quot;  ||  ModelNumber__c == &quot;&quot;  ||  ActingTenderingCompany__c == &quot;&quot;  ||  UnitPrice__c == null  || HighNoteRecords__c == &quot;&quot;  || QUANTITY__c == null  ) , true, false
), 
$Profile.Name != &apos;系统管理员&apos;, 
$Profile.Name != &apos;System Administrator&apos; 

)</errorConditionFormula>
        <errorMessage>选择丢单的时候 必须填写丢单原因 、厂牌、型号、代理投标公司、单价（元）、数量必填！！！！</errorMessage>
    </validationRules>
</CustomObject>